--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aluraplus</title>
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+    </head>
+    <body>
+    <section class="container principal">
+       <div>
+        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+        <img src="imagens/Combo.png" alt="o combo+ é a junção  e do alura línguas">
+        <a class="container_botão" href="https://www.alura.com.br/">assine por 12x de R$ 120,00*</a>
+        <a class="container_botão botão_secundario" href="https://www.alura.com.br/">assinar somente o alura+</a>
+        <p class="container_aviso>">* o preço pode variar caso a assinatura seja feita em outros planos </p>
+        </div>
+    </section>
 </body>
 </html>
