--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
     <section class="container principal">
        <div>
-        <h1>Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
+        <h1 class= "container_titulo"> Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço único.</h1>
         <img src="imagens/Combo.png" alt="o combo+ é a junção  e do alura línguas">
         <a class="container_botão" href="https://www.alura.com.br/">assine por 12x de R$ 120,00*</a>
         <a class="container_botão botão_secundario" href="https://www.alura.com.br/">assinar somente o alura+</a>
